[gd_scene load_steps=3 format=3 uid="uid://d2u3oarn5xk5f"]

[ext_resource type="Script" uid="uid://gfs5vqfnahuh" path="res://scripts/post_order_display.gd" id="1"]
[ext_resource type="Theme" uid="uid://cgkfk8bfuen5" path="res://Image/UI/BorderUICCComplete.tres" id="2"]

[node name="PostOrderDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.444444
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Current" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current"

[node name="CurrentName" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="NextName" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
